stacks/dns.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dns
