stacks/load-balancer.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: load-balancer
