stacks/prometheus.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus
