stacks/tinkerbell.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tinkerbell
---
# Override Smee to be a headless service
apiVersion: v1
kind: Service
metadata:
  name: smee
  namespace: tinkerbell
  labels:
    app: smee
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
    kustomize.toolkit.fluxcd.io/ssa: merge
spec:
  clusterIP: None
  clusterIPs:
    - None
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
