stacks/traefik.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: traefik-dashboard
  namespace: kube-system
spec:
  parentRefs:
    - kind: Gateway
      name: traefik-gateway
  hostnames:
    - traefik.localhost
  rules:
    - backendRefs:
        - kind: TraefikService
          name: api@internal
