stacks/capacitor.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: capacitor-ingress
  namespace: flux-system
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: capacitor
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: capacitor
  namespace: flux-system
spec:
  parentRefs:
    - kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - flux.localhost
  rules:
    - backendRefs:
        - kind: Service
          name: capacitor
          port: 9000
